5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4443/executions/1667_2322.log
== TEST (2019-04-16 16:06:56) 
-- CODE:
#Leitura do nome do bruxo:
nome = input("Digite o nome do bruxo desejado (NEVILLE OU LUNA: ")

#Calculo da velocidade
if(nome.lower() == NEVILLE):
	print(15.7654/1.3479)
if(nome.lower() == LUNA):
	print(7.675/3.789)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(nome.lower() == NEVILLE):
NameError: name 'NEVILLE' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:07:42) 
-- CODE:
#Leitura do nome do bruxo:
nome = input("Digite o nome do bruxo desejado (NEVILLE OU LUNA: ")

#Calculo da velocidade
if(nome.lower() == NEVILLE):
	print(15.7654/1.3479)
if(nome.lower() == LUNA):
	print(7.675/3.789)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(nome.lower() == NEVILLE):
NameError: name 'NEVILLE' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:08:43) 
-- CODE:
#Leitura do nome do bruxo:
nome = input("Digite o nome do bruxo desejado (NEVILLE OU LUNA: ")

#Calculo da velocidade
if(nome.lower() == NEVILLE):
	print(15.7654/1.3479)
if(nome.lower() == LUNA):
	print(7.675/3.789)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(nome.lower() == NEVILLE):
NameError: name 'NEVILLE' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:11:47) 
-- CODE:
#Leitura do nome do bruxo:
nome = input("Digite o nome do bruxo desejado (NEVILLE OU LUNA: ")

#Calculo da velocidade
if(nome.lower() == NEVILLE):
	print(15.7654/1.3479)
if(nome.lower() == LUNA):
	print(7.675/3.789)
-- EXECUTION TIME:
0.129533
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2322/main.py", line 5, in <module>
    if(nome.lower() == NEVILLE):
NameError: name 'NEVILLE' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:12:35) 
-- CODE:
#Leitura do nome do bruxo:
nome = input("Digite o nome do bruxo desejado (NEVILLE OU LUNA: ")

#Calculo da velocidade
if(nome.lower() == NEVILLE):
	print(15.7654/1.3479)
else:
	print(7.675/3.789)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(nome.lower() == NEVILLE):
NameError: name 'NEVILLE' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:12:45) 
-- CODE:
#Leitura do nome do bruxo:
nome = input("Digite o nome do bruxo desejado (NEVILLE OU LUNA: ")

#Calculo da velocidade
if(nome.lower() == NEVILLE):
	print(15.7654/1.3479)
else:
	print(7.675/3.789)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(nome.lower() == NEVILLE):
NameError: name 'NEVILLE' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:13:06) 
-- CODE:
#Leitura do nome do bruxo:
nome = input("Digite o nome do bruxo desejado (NEVILLE OU LUNA): ")

#Calculo da velocidade
if(nome.lower() == NEVILLE):
	print(15.7654/1.3479)
else:
	print(7.675/3.789)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(nome.lower() == NEVILLE):
NameError: name 'NEVILLE' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:13:26) 
-- CODE:
#Leitura do nome do bruxo:
nome = input("Digite o nome do bruxo desejado (NEVILLE OU LUNA): ")

#Calculo da velocidade
if(nome.lower() == "NEVILLE"):
	print(15.7654/1.3479)
else:
	print(7.675/3.789)
-- OUTPUT:
2.0256004222750064
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:13:42) 
-- CODE:
#Leitura do nome do bruxo:
nome = input("Digite o nome do bruxo desejado (NEVILLE OU LUNA): ")

#Calculo da velocidade
if(nome.lower() == "NEVILLE"):
	print(15.7654/1.3479)
else:
	print(7.675/3.789)
-- EXECUTION TIME:
0.160037
-- TEST CASE 1:
---- input:
NEVILLE
---- correct output:
11.696268269159432
---- user output:
2.0256004222750064
-- TEST CASE 2:
---- input:
LUNA
---- correct output:
2.0253365003958828
---- user output:
2.0256004222750064
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:14:35) 
-- CODE:
#Leitura do nome do bruxo:
nome = input("Digite o nome do bruxo desejado (NEVILLE OU LUNA): ")

#Calculo da velocidade
if(nome.lower() == "NEVILLE"):
	print(15.7654/1.3479)
if(nome.lower() == "LUNA"):
	print(7.675/3.789)
-- OUTPUT:
2.0256004222750064
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:15:25) 
-- CODE:
#Leitura do nome do bruxo:
nome = input("Digite o nome do bruxo desejado (NEVILLE OU LUNA): ")

#Calculo da velocidade
if(nome.lower() == "NEVILLE"):
	print(15.7654/1.3479)
if(nome.lower() == "LUNA"):
	print(7.675/3.789)
-- OUTPUT:
2.0256004222750064
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:15:55) 
-- CODE:
#Leitura do nome do bruxo:
nome = input("Digite o nome do bruxo desejado (NEVILLE OU LUNA): ")

#Calculo da velocidade
if(nome.lower() == "NEVILLE"):
	print(15.7654/1.3479)
if(nome.lower() == "LUNA"):
	print(7.675/3.789)
-- OUTPUT:
2.0256004222750064
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:29:09) 
-- CODE:
#Leitura do nome do bruxo:
nome = input("Digite o nome do bruxo desejado (NEVILLE OU LUNA): ")
nome = nome.lower()
#Calculo da velocidade
if(nome == "NEVILLE"):
	print(15.7654/1.3479)
if(nome == "LUNA"):
	print(7.675/3.789)
-- OUTPUT:
2.0256004222750064
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:29:35) 
-- CODE:
#Leitura do nome do bruxo:
nome = input("Digite o nome do bruxo desejado (NEVILLE OU LUNA): ")
nome = nome.lower()
#Calculo da velocidade
if(nome == "NEVILLE"):
	print(15.7654/1.3479)
else:
	print(7.675/3.789)
-- OUTPUT:
2.0256004222750064
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:29:45) 
-- CODE:
#Leitura do nome do bruxo:
nome = input("Digite o nome do bruxo desejado (NEVILLE OU LUNA): ")
nome = nome.lower()
#Calculo da velocidade
if(nome == "NEVILLE"):
	print(15.7654/1.3479)
else:
	print(7.675/3.789)
-- OUTPUT:
2.0256004222750064
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:32:39) 
-- CODE:
#Leitura do nome do bruxo:
nome = input("Digite o nome do bruxo desejado (NEVILLE OU LUNA): ")
nome = nome.lower()
#Calculo da velocidade
if(nome == "LUNA"):
	print(7.674/3.789)
else:
	print(15.7654/1.3479)
-- OUTPUT:
11.696268269159432
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:33:22) 
-- CODE:
#Leitura do nome do bruxo:
nome = input("Digite o nome do bruxo desejado (NEVILLE OU LUNA): ")
nome = nome.lower()
#Calculo da velocidade
if(nome == "LUNA"):
	print(7.674/3.789)
else:
	print(15.7654/1.3479)
-- OUTPUT:
11.696268269159432
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:35:42) 
-- CODE:
#Leitura do nome do bruxo:
nome = input("Digite o nome do bruxo desejado (NEVILLE OU LUNA): ")
nome = nome.lower()
print(nome)
#Calculo da velocidade
#if(nome == "LUNA"):
#	print(7.674/3.789)
#else:
#	print(15.7654/1.3479)
-- OUTPUT:
neville
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:36:25) 
-- CODE:
#Leitura do nome do bruxo:
nome = input("Digite o nome do bruxo desejado (NEVILLE OU LUNA): ")
nome = nome.lower()

#Calculo da velocidade
if(nome == "luna"):
	print(7.674/3.789)
else:
	print(15.7654/1.3479)
-- OUTPUT:
11.696268269159432
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:36:34) 
-- CODE:
#Leitura do nome do bruxo:
nome = input("Digite o nome do bruxo desejado (NEVILLE OU LUNA): ")
nome = nome.lower()

#Calculo da velocidade
if(nome == "luna"):
	print(7.674/3.789)
else:
	print(15.7654/1.3479)
-- OUTPUT:
11.696268269159432
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:36:47) 
-- CODE:
#Leitura do nome do bruxo:
nome = input("Digite o nome do bruxo desejado (NEVILLE OU LUNA): ")
nome = nome.lower()

#Calculo da velocidade
if(nome == "luna"):
	print(7.674/3.789)
else:
	print(15.7654/1.3479)
-- OUTPUT:
11.696268269159432
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:36:56) 
-- CODE:
#Leitura do nome do bruxo:
nome = input("Digite o nome do bruxo desejado (NEVILLE OU LUNA): ")
nome = nome.lower()

#Calculo da velocidade
if(nome == "luna"):
	print(7.674/3.789)
else:
	print(15.7654/1.3479)
-- OUTPUT:
11.696268269159432
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:37:37) 
-- CODE:
#Leitura do nome do bruxo:
nome = input("Digite o nome do bruxo desejado (NEVILLE OU LUNA): ")
nome = nome.lower()

#Calculo da velocidade
if(nome == "luna"):
	print(7.674/3.789)
if(nome == "neville"):
	print(15.7654/1.3479)
-- OUTPUT:
11.696268269159432
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:37:48) 
-- CODE:
#Leitura do nome do bruxo:
nome = input("Digite o nome do bruxo desejado (NEVILLE OU LUNA): ")
nome = nome.lower()

#Calculo da velocidade
if(nome == "luna"):
	print(7.674/3.789)
if(nome == "neville"):
	print(15.7654/1.3479)
-- OUTPUT:
11.696268269159432
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:37:59) 
-- CODE:
#Leitura do nome do bruxo:
nome = input("Digite o nome do bruxo desejado (NEVILLE OU LUNA): ")
nome = nome.lower()

#Calculo da velocidade
if(nome == "luna"):
	print(7.674/3.789)
if(nome == "neville"):
	print(15.7654/1.3479)
-- EXECUTION TIME:
0.123879
-- TEST CASE 1:
---- input:
NEVILLE
---- correct output:
11.696268269159432
---- user output:
11.696268269159432
-- TEST CASE 2:
---- input:
LUNA
---- correct output:
2.0253365003958828
---- user output:
2.0253365003958828
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
